--- a/app/src/main/res/drawable/box.xml
+++ b/app/src/main/res/drawable/box.xml
@@ -2,10 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <gradient
-                android:angle="78"
-                android:startColor="@color/colorOnPrimary"
-                android:endColor="@color/colorPrimary"/>
+           <solid android:color="@color/colorPrimary"/>
         </shape>
     </item>
 </selector>
