--- a/app/src/main/res/drawable/circle.xml
+++ b/app/src/main/res/drawable/circle.xml
@@ -2,10 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="oval">
-            <gradient
-                android:angle="78"
-                android:startColor="@color/colorPrimaryLight"
-                android:endColor="@color/colorSecondaryText"/>
+            <solid android:color="@color/colorPrimaryLight"/>
         </shape>
     </item>
 </selector>
