--- a/app/src/main/res/layout/activity_user_details.xml
+++ b/app/src/main/res/layout/activity_user_details.xml
@@ -28,7 +28,7 @@
                 android:layout_height="250dp"
                 android:layout_alignParentTop="true"
                 android:scaleType="fitXY"
-                android:src="@drawable/box" />
+                android:src="@drawable/ic_subtract2" />
 
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbarU"
@@ -44,51 +44,51 @@
         </RelativeLayout>
 
 
-        <ImageView
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:layout_gravity="center_horizontal"
-            android:src="@drawable/circle"
-            android:layout_marginTop="-190dp"
-            android:elevation="1dp"/>
+<!--        <ImageView-->
+<!--            android:layout_width="150dp"-->
+<!--            android:layout_height="150dp"-->
+<!--            android:layout_gravity="center_horizontal"-->
+<!--            android:src="@drawable/circle"-->
+<!--            android:layout_marginTop="-190dp"-->
+<!--            android:elevation="1dp"/>-->
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginTop="-90dp">
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:orientation="vertical"-->
+<!--            android:layout_marginTop="-90dp">-->
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="280dp"
-            android:layout_height="220dp"
-            android:layout_gravity="center"
-            android:alpha="0.9"
-            android:backgroundTint="@color/colorOnPrimary"
-            app:cardBackgroundColor="@color/colorSecondaryText"
-            app:cardElevation="5dp">
+<!--        <androidx.cardview.widget.CardView-->
+<!--            android:layout_width="280dp"-->
+<!--            android:layout_height="220dp"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:alpha="0.9"-->
+<!--            android:backgroundTint="@color/colorOnPrimary"-->
+<!--            app:cardBackgroundColor="@color/colorSecondaryText"-->
+<!--            app:cardElevation="5dp">-->
 
-            <TextView
-                android:id="@+id/displayName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:fontFamily="@font/poppins_bold"
-                android:text="Name"
-                android:textAlignment="center"
-                android:textSize="24sp" />
+<!--            <TextView-->
+<!--                android:id="@+id/displayName"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_gravity="center"-->
+<!--                android:fontFamily="@font/poppins_bold"-->
+<!--                android:text="Name"-->
+<!--                android:textAlignment="center"-->
+<!--                android:textSize="24sp" />-->
 
-            <TextView
-                android:id="@+id/displayUsername"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:fontFamily="@font/poppins_regular"
-                android:text="Email"
-                android:textAlignment="center"
-                android:layout_marginTop="40dp"
-                android:textSize="18sp" />
+<!--            <TextView-->
+<!--                android:id="@+id/displayUsername"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_gravity="center"-->
+<!--                android:fontFamily="@font/poppins_regular"-->
+<!--                android:text="Email"-->
+<!--                android:textAlignment="center"-->
+<!--                android:layout_marginTop="40dp"-->
+<!--                android:textSize="18sp" />-->
 
-        </androidx.cardview.widget.CardView>
+<!--        </androidx.cardview.widget.CardView>-->
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -196,8 +196,6 @@
                     app:layout_constraintTop_toBottomOf="@+id/update" />
 
             </LinearLayout>
-
-        </LinearLayout>
 
         </LinearLayout>
 
