--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -16,12 +16,13 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" android:orientation="vertical">
+            app:layout_constraintTop_toTopOf="parent"
+            android:orientation="vertical">
 
             <RelativeLayout
                 android:id="@+id/relativeLayout"
                 android:layout_width="wrap_content"
-                android:layout_height="150dp">
+                android:layout_height="130dp">
 
                 <ImageView
                     android:layout_width="match_parent"
@@ -37,7 +38,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:orientation="vertical"
-                android:layout_marginTop="-80dp">
+                android:layout_marginTop="-95dp">
 
                 <com.google.android.material.card.MaterialCardView
                     app:theme="@style/Theme.MaterialComponents"
